# avanalyze

./: AUDIT_REPORT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  options.rs  wire_ext.rs
tests/: audit_avanalyze_api.rs  audit_avanalyze_options.rs  audit_avanalyze_serde.rs  audit_avanalyze_strict.rs
