[package]
name = "avanalyze"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Findit-AI/avanalyze"
homepage = "https://github.com/Findit-AI/avanalyze"
documentation = "https://docs.rs/avanalyze"
description = "Long-running Apple Vision.framework worker that analyses keyframes and emits mediaschema-shaped detections."
license = "MIT OR Apache-2.0"
rust-version = "1.95"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["serde?/default"]
serde = ["dep:serde"]
tracing = ["dep:tracing"]

[dependencies]
bytes = "1"
serde = { version = "1", optional = true, features = ["derive"] }
smol_str = "0.3"

tracing = { version = "0.1", optional = true }

# Domain types live in `mediaschema` — engine output IS the storage shape.
# Only the `video` aggregate tree is needed (apple-vision feeds Keyframe +
# detections). Pinned to the 0.1 minor series; per mediaschema's pre-1.0
# contract, any breaking surface change bumps the `x` in `0.x.y`, so 0.1.*
# patches are guaranteed additive across Rust API + proto wire + sqlx DDL
# + mongodb document shape.
#
# `buffa` deliberately NOT enabled: avanalyze writes against DOMAIN types
# (validated `try_new`-style aggregates), not the protobuf-generated
# wire records — engine boundary stays clean, serialization happens
# inside mediaschema's storage backends.
mediaschema = { version = "0.2", default-features = false, features = ["std", "video"] }
mediaframe = { version = "0.1", default-features = false, features = ["std"] }
# `Keyframe::try_new` requires a `mediatime::Timestamp` parameter; the
# domain layer re-exports the type but the constructor lives here.
mediatime = { version = "0.1", default-features = false, features = ["std"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSData", "NSError", "NSObjCRuntime", "NSIndexSet"] }
objc2-core-video = { version = "0.3", features = ["CVBase", "CVBuffer", "CVImageBuffer", "CVPixelBuffer", "CVReturn"] }
objc2-vision = { version = "0.3", features = [
  "objc2-core-foundation",
  "objc2-core-video",
  "alloc",
  "VNRequest", "VNRequestHandler", "VNObservation",
  "VNStatefulRequest",
  "VNClassifyImageRequest",
  "VNDetectFaceRectanglesRequest",
  "VNDetectFaceLandmarksRequest",
  "VNFaceLandmarks",
  "VNDetectFaceCaptureQualityRequest",
  "VNDetectHumanRectanglesRequest",
  "VNRecognizeAnimalsRequest",
  "VNDetectAnimalBodyPoseRequest",
  "VNDetectHumanBodyPoseRequest",
  "VNDetectHumanBodyPose3DRequest",
  "VNDetectHumanHandPoseRequest",
  "VNGeneratePersonInstanceMaskRequest",
  "VNGeneratePersonSegmentationRequest",
  "VNGeometry", "VNRecognizedPoint3D", "VNHumanBodyRecognizedPoint3D",
  "VNDetectedPoint", "VNTypes",
  "VNGenerateAttentionBasedSaliencyImageRequest",
  "VNGenerateObjectnessBasedSaliencyImageRequest",
  "VNRecognizeTextRequest",
  "VNDetectBarcodesRequest",
  "VNCalculateImageAestheticsScoresRequest",
  "VNDetectHorizonRequest",
  "VNDetectDocumentSegmentationRequest",
] }

[lints]
workspace = true

[dev-dependencies]
criterion = "0.8"
serde_json = "1"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "aarch64-apple-darwin"
targets = []

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
