[package]
name = "avanalyze"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/Findit-AI/avanalyze"
homepage = "https://github.com/Findit-AI/avanalyze"
documentation = "https://docs.rs/avanalyze"
description = "Long-running Apple Vision.framework worker that analyses keyframes and emits mediaschema-shaped detections."
license = "MIT OR Apache-2.0"
rust-version = "1.95"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["serde?/default"]
serde = ["dep:serde"]
tracing = ["dep:tracing"]

[dependencies]
bytes = "1"
serde = { version = "1", optional = true, features = ["derive"] }
smol_str = "0.3"

tracing = { version = "0.1", optional = true }

# Domain types live in `mediaschema` — engine output IS the storage shape.
# Only the `video` aggregate tree is needed (apple-vision feeds Keyframe +
# detections).
#
# Git dependency (not crates.io 0.2.0) pinned to mediaschema `main`: the
# `feat/keyframe-thumbnail-fk` work (which replaced the `Keyframe`'s inline
# `data`/`mime` with a first-class `Thumbnail` entity + a keyframe
# `thumbnail_id` FK, a 6-arg `try_new`) is now merged to `main`. The desktop
# indexer composes avanalyze's returned `Keyframe`, so both crates MUST
# resolve to the same mediaschema revision (same git URL + branch). Revert
# to a crates.io version once that mediaschema release ships.
#
# `sqlx-sqlite` deliberately NOT enabled: avanalyze uses only the validated
# DOMAIN `Keyframe` (not the storage layer) — the desktop owns persistence.
# `buffa` deliberately NOT enabled either: avanalyze writes against DOMAIN
# types (validated `try_new`-style aggregates), not the protobuf-generated
# wire records — the engine boundary stays clean, serialization happens
# inside mediaschema's storage backends.
mediaschema = { git = "https://github.com/Findit-AI/mediaschema", branch = "main", default-features = false, features = ["std", "video"] }
mediaframe = { version = "0.1", default-features = false, features = ["std"] }
# `Keyframe::try_new` requires a `mediatime::Timestamp` parameter; the
# domain layer re-exports the type but the constructor lives here.
mediatime = { version = "0.1", default-features = false, features = ["std"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
# `exception` pulls in `objc2-exception-helper`, enabling
# `objc2::exception::catch` — the ONLY way to catch an Objective-C
# `NSException` unwinding across the Vision FFI boundary. Rust's
# `catch_unwind` cannot catch foreign exceptions, so without this a
# Vision detector that raises (e.g. on a pathological keyframe) aborts
# the whole process (`fatal runtime error: Rust cannot catch foreign
# exceptions`). See `VisionRequests::perform` / the `extract_*` guards.
objc2 = { version = "0.6", features = ["exception"] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSData", "NSError", "NSObjCRuntime", "NSIndexSet"] }
objc2-core-video = { version = "0.3", features = ["CVBase", "CVBuffer", "CVImageBuffer", "CVPixelBuffer", "CVReturn"] }
objc2-vision = { version = "0.3", features = [
  "objc2-core-foundation",
  "objc2-core-video",
  "alloc",
  "VNRequest", "VNRequestHandler", "VNObservation",
  "VNStatefulRequest",
  "VNClassifyImageRequest",
  "VNDetectFaceRectanglesRequest",
  "VNDetectFaceLandmarksRequest",
  "VNFaceLandmarks",
  "VNDetectFaceCaptureQualityRequest",
  "VNDetectHumanRectanglesRequest",
  "VNRecognizeAnimalsRequest",
  "VNDetectAnimalBodyPoseRequest",
  "VNDetectHumanBodyPoseRequest",
  "VNDetectHumanBodyPose3DRequest",
  "VNDetectHumanHandPoseRequest",
  "VNGeneratePersonInstanceMaskRequest",
  "VNGeneratePersonSegmentationRequest",
  "VNGeometry", "VNRecognizedPoint3D", "VNHumanBodyRecognizedPoint3D",
  "VNDetectedPoint", "VNTypes",
  "VNGenerateAttentionBasedSaliencyImageRequest",
  "VNGenerateObjectnessBasedSaliencyImageRequest",
  "VNRecognizeTextRequest",
  "VNDetectBarcodesRequest",
  "VNCalculateImageAestheticsScoresRequest",
  "VNDetectHorizonRequest",
  "VNDetectDocumentSegmentationRequest",
] }

[lints]
workspace = true

[dev-dependencies]
criterion = "0.8"
serde_json = "1"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "aarch64-apple-darwin"
targets = []

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
